Fix word wrap on Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,7 +170,6 @@ code, pre {
     overflow-x: auto;
     overflow-wrap: normal;
     word-break: normal;
-    word-wrap: break-word;
     tab-size: 4;
     background-color: #282c34;
     border-radius: 10px;
